--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kamuridesu/simplelyrics",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,8 +12,8 @@
   "type": "module",
   "bin": "cli.js",
   "dependencies": {
-    "axios": "^1.3.4",
-    "cheerio": "^1.0.0-rc.12",
-    "node-html-parser": "^6.1.5"
+    "axios": "1.7.5",
+    "cheerio": "1.0.0",
+    "node-html-parser": "6.1.5"
   }
 }
